--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </header>
 
   <body>
-    <h1 id="title"> Τύμπανα 🥁 Κρουστά</h1>
+    <h1 id="title"> Τύμπανα 🥁 & 🥁 Κρουστά</h1>
     <div class="set">
       <button class="w ς drum">ς</button>
       <button class="a α drum">α</button>
@@ -24,5 +24,5 @@
 
     <script src="./index.js" charset="utf-8"></script>
   </body>
-  <footer>Made with ❤️ in London.</footer>
+  <footer>Δημιουργήθηκε με ❤️ στην Στοκχόλμη.</footer>
 </html>
